--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,33 +1,24 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@using DemoShoppingWebsite.Models
+@model IEnumerable<table_Product>
+@{
+    ViewBag.Title = "商品瀏覽";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
+<div class="row" style="margin-top:10px">
+    @foreach(var item in Model)
+     { 
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="~/image/@item.Image" style="width:300px;height:270px"/>
+                <div class="caption">
+                    <h3>@item.Name</h3>
+                    <h4>單價 : @item.Price</h4>
+                    <p>
+                        <a href="@Url.Action("AddCar","Member") ? ProductId = @item.ProductId" class="btn btn-primary">加入購物車</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+     }
+</div>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
-</main>
